# rootkit

./: CMakeLists.txt
central/: main.c
central/menu/: menu.c  menu.h
central/networking/: networking.c  networking.h  protocol.c  protocol.h
central/protocol/: protocol.c  protocol.h
central/utils/: utils.c  utils.h
client/: main.c
client/keylogging/: keylogger.c  keylogger.h
client/networking/: networking.c  networking.h  protocol.c  protocol.h
client/process_launcher/: process_launcher.c  process_launcher.h
client/utils/: utils.c  utils.h
client/watcher/: watcher.c  watcher.h
networking/: networking.c  networking.h  protocol.c  protocol.h
utils/: utils.c  utils.h
